--- a/SleepImprovement/SleepImprovement/SleepImprovement.csproj
+++ b/SleepImprovement/SleepImprovement/SleepImprovement.csproj
@@ -54,6 +54,10 @@
     <Reference Include="UnityEngine.IMGUIModule">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\UnityEngine.IMGUIModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.ParticleSystemModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\UnityEngine.ParticleSystemModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityModManager">
       <HintPath>..\..\..\UnityModManager\UnityModManager.dll</HintPath>
     </Reference>
@@ -61,6 +65,7 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="Patches\SleepPatches.cs" />
+    <Compile Include="Patches\SleepUIPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SleepImprovementSettings.cs" />
   </ItemGroup>
