--- a/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
+++ b/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
@@ -37,6 +37,9 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="SailwindModdingHelper">
+      <HintPath>..\..\SailwindModdingHelper\SailwindModdingHelper\bin\Release\SailwindModdingHelper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -57,12 +60,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <Compile Include="Patches\BottleDrinkingPatches.cs" />
+    <Compile Include="Patches\MouthColPatches.cs" />
     <Compile Include="Patches\SaveablePrefabPatches.cs" />
     <Compile Include="Patches\SaveLoadManagerPatches.cs" />
     <Compile Include="Patches\ShipItemLampHookPatches.cs" />
     <Compile Include="Patches\ShipItemScrollPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SaveFileHelper.cs" />
     <Compile Include="Scripts\ShipItemLampHookItemHooked.cs" />
     <Compile Include="TAFSaveContainer.cs" />
   </ItemGroup>
