--- a/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
+++ b/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
@@ -37,6 +37,14 @@
     <Reference Include="Assembly-CSharp">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
+    <Reference Include="Oculus.Platform, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\Oculus.Platform.dll</HintPath>
+    </Reference>
+    <Reference Include="Oculus.VR, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\Oculus.VR.dll</HintPath>
+    </Reference>
     <Reference Include="SailwindModdingHelper">
       <HintPath>..\..\SailwindModdingHelper\SailwindModdingHelper\bin\Release\SailwindModdingHelper.dll</HintPath>
     </Reference>
@@ -48,6 +56,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEngine.ClothModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\UnityEngine.ClothModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
@@ -60,12 +72,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
+    <Compile Include="Patches\BoatCameraPatches.cs" />
     <Compile Include="Patches\BottleDrinkingPatches.cs" />
     <Compile Include="Patches\MouthColPatches.cs" />
+    <Compile Include="Patches\PlayerClimbPatches.cs" />
+    <Compile Include="Patches\PlayerCrouchingPatches.cs" />
+    <Compile Include="Patches\StartMenuPatches.cs" />
     <Compile Include="Patches\SaveablePrefabPatches.cs" />
     <Compile Include="Patches\SaveLoadManagerPatches.cs" />
     <Compile Include="Patches\ShipItemLampHookPatches.cs" />
     <Compile Include="Patches\ShipItemScrollPatches.cs" />
+    <Compile Include="Patches\WindClothPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\ShipItemLampHookItemHooked.cs" />
     <Compile Include="TAFSaveContainer.cs" />
