--- a/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
+++ b/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Patches\MouthColPatches.cs" />
     <Compile Include="Patches\PlayerClimbPatches.cs" />
     <Compile Include="Patches\PlayerCrouchingPatches.cs" />
+    <Compile Include="Patches\PortDudePatches.cs" />
     <Compile Include="Patches\PortPatches.cs" />
     <Compile Include="Patches\ShipItemPatches.cs" />
     <Compile Include="Patches\StartMenuPatches.cs" />
@@ -94,12 +95,16 @@
     <Compile Include="Patches\SaveLoadManagerPatches.cs" />
     <Compile Include="Patches\ShipItemLampHookPatches.cs" />
     <Compile Include="Patches\ShipItemScrollPatches.cs" />
+    <Compile Include="Patches\SunPatches.cs" />
     <Compile Include="Patches\WindClothPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\MissionSortButton.cs" />
     <Compile Include="Scripts\MissionSorting.cs" />
+    <Compile Include="Scripts\MissionStoring.cs" />
     <Compile Include="Scripts\ShipItemLampHookItemHooked.cs" />
     <Compile Include="Scripts\ShipItemMoveOnAltActivate.cs" />
     <Compile Include="Scripts\ShipItemRotateOnAltActivate.cs" />
+    <Compile Include="Scripts\ModMenuButton.cs" />
     <Compile Include="TAFSaveContainer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
