--- a/SkipDisclaimer/SkipDisclaimer/SkipDisclaimer.csproj
+++ b/SkipDisclaimer/SkipDisclaimer/SkipDisclaimer.csproj
@@ -17,6 +17,9 @@
     <Reference Include="Oculus.VR">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\Oculus.VR.dll</HintPath>
     </Reference>
+    <Reference Include="SailwindModdingHelper">
+      <HintPath>..\..\..\SailwindModdingHelper\SailwindModdingHelper\bin\Release\SailwindModdingHelper.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Sailwind\Sailwind_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
