--- a/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
+++ b/TweaksAndFixes/TweaksAndFixes/TweaksAndFixes.csproj
@@ -86,24 +86,21 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="Patches\BoatCameraPatches.cs" />
+    <Compile Include="Patches\DisableSwitchCamPatches.cs" />
     <Compile Include="Patches\FixDrinkingBottlePatches.cs" />
-    <Compile Include="Patches\MissionDetailsUIPatches.cs" />
+    <Compile Include="Patches\MissionSortButtonPatches.cs" />
     <Compile Include="Patches\MouseButtonPointerPatches.cs" />
     <Compile Include="Patches\MouthColPatches.cs" />
-    <Compile Include="Patches\PlayerClimbPatches.cs" />
-    <Compile Include="Patches\PlayerCrouchingPatches.cs" />
-    <Compile Include="Patches\PortDudePatches.cs" />
-    <Compile Include="Patches\PortPatches.cs" />
+    <Compile Include="Patches\PreventMovementWhenPausePatches.cs" />
+    <Compile Include="Patches\QuickSavePatches.cs" />
     <Compile Include="Patches\PreventMugSpillagePatches.cs" />
     <Compile Include="Patches\ShipItemEnterInventoryPatches.cs" />
-    <Compile Include="Patches\ShipItemPatches.cs" />
-    <Compile Include="Patches\StartMenuPatches.cs" />
+    <Compile Include="Patches\ShipItemMiscPatches.cs" />
     <Compile Include="Patches\SaveablePrefabPatches.cs" />
     <Compile Include="Patches\SaveLoadManagerPatches.cs" />
     <Compile Include="Patches\ShipItemLampHookPatches.cs" />
-    <Compile Include="Patches\ShipItemScrollPatches.cs" />
-    <Compile Include="Patches\SunPatches.cs" />
+    <Compile Include="Patches\ScrollArrowsFixPatches.cs" />
+    <Compile Include="Patches\QuitNoSavePatches.cs" />
     <Compile Include="Patches\WindClothPatches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scripts\GPMissionSortButton.cs" />
@@ -114,7 +111,6 @@
     <Compile Include="Scripts\ShipItemLampHookItemHooked.cs" />
     <Compile Include="Scripts\ShipItemMoveOnAltActivate.cs" />
     <Compile Include="Scripts\ShipItemRotateOnAltActivate.cs" />
-    <Compile Include="Scripts\ModMenuButton.cs" />
     <Compile Include="TAFSaveContainer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
